# frappe-email-routing

./: LICENSE  README.md  package.json  pyproject.toml
frappe_email_routing/: email_routing.py  hooks.py  modules.txt
frappe_email_routing/tests/: __init__.py  test_email_routing.py
frappe_opportunity_email_routing/: email_routing.py  hooks.py  modules.txt
