[project]
name = "frappe-email-routing"
authors = [
    { name = "Mimirio", email = "info@mimirio.com"}
]
description = "Custom email routing and automatic document linking for Mimirio's internal CRM workflows."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/chief-nerd/frappe-email-routing"

[tool.flit.module]
name = "frappe_email_routing"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
